@@ -1,6 +1,6 @@
 % File src/library/tools/man/compactPDF.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 2011-2014 R Core Team
+% Copyright 2011-2022  R Core Team
 % Distributed under GPL 2 or later
 
 \name{compactPDF}
@@ -18,7 +18,8 @@ compactPDF(paths,
            qpdf = Sys.which(Sys.getenv("R_QPDF", "qpdf")),
            gs_cmd = Sys.getenv("R_GSCMD", ""),
            gs_quality = Sys.getenv("GS_QUALITY", "none"),
-           gs_extras = character())
+           gs_extras = character(),
+           verbose = FALSE)
 
 \method{format}{compactPDF}(x, ratio = 0.9, diff = 1e4, ...)
 }
@@ -39,6 +40,9 @@ compactPDF(paths,
     \code{"screen"} (72dpi).  Can be abbreviated.}
   \item{gs_extras}{An optional character vector of further options to be
     passed to GhostScript.}
+  \item{verbose}{\code{\link{logical}} or non-negative integer indicating if
+    and how much of the compression utilties' output should be shown.}
+  %--> format(*):
   \item{x}{An object of class \code{"compactPDF"}.}
   \item{ratio, diff}{Limits for reporting: files are only reported whose
     sizes are reduced both by a factor of \code{ratio} and by
